# quick-insertion-tree

./: -DTIMER  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  analysis.cpp  basic_analysis.cpp  bench-bptree-v2.cpp  bench-bptree.cpp  bench-optiql.cpp  bench-v2.cpp  bench-v2.sh  bench.cpp  bench.sh  bench_large.sh  betree.h  block_manager.h  bptree_basic_analysis.cpp  bptree_mixed_analysis.cpp  btio.cpp  buffer_dualtree.h  config  config.toml  dist_detector.h  dual_basic_analysis.cpp  dual_mixed_analysis.cpp  dual_tree.h  dual_tree_knob.h  dual_tree_knob.tpp  exp.sh  file_reader.h  mixed_analysis.cpp  multifile.sh  multithread.sh  outlier_detector.h  plot-v2.py  plot.py  quit.csv  (+13 more)
configs/: config1.toml  config16.toml  config2.toml  config24.toml  config32.toml  config4.toml  config40.toml  config48.toml  config8.toml
include/dual_btree/: dual_tree.h  dual_tree_knob.h
plot/: fast.py  plot.py  threads.py  uniques.py
results/: atm.csv  clang.csv  flg.csv  rwl.csv  spn.csv  srv.csv  std.csv
scripts/: generate.sh  run_exp.sh  run_loads.sh  run_sware_exp.sh  script.sh  workload.sh
src/: CMakeLists.txt  FastAppendBeTree.h  bench_bptree.h  bench_sabtree.h  betree.h  betree_utils.h  block_manager.h  btree_permute_test.cpp  collection.h  config.cpp  dist_detector.h  dual_tree.h  dual_tree_knob.cpp  dual_tree_knob.h  example.cpp  index_bench.h  lru_cache.h  outlier_detector.h  stdev_detector.h  test_satree.cpp  tree_analysis.cpp
src/bamboofilters/: bamboofilter.h  hash.h  predefine.h  segment.h
src/bptree/: README.md  atm.h  block_manager.h  bp_node.h  bp_tree.h  config.h  disk_block_manager.h  dist_detector.h  dual_tree.h  fast_append_tree.h  heap.h  iqr_detector.h  kv_store.h  lru_cache.h  memory_block_manager.h  mtx.h  obvious_detector.h  outlier_detector.h  range_detector.h  stdev_detector.h  util.h
src/include/: BTreeNode.hpp  MemoryBlockManager.hpp  config.hpp  mtx.hpp  outlier_detector.h  trees.hpp  util.hpp
src/include/trees/: ConcurrentQuITBTree.hpp  ConcurrentSimpleBTree.hpp  ConcurrentTailBTree.hpp  LILBTree.hpp  QuITBTree.hpp  SimpleBTree.hpp  TailBTree.hpp
src/sware/: adaptive.h  satree.h  swareBuffer.h
workloads/: 512sorted
